Employee Management System get employee API from eid
