# src/main/resources/api.yaml
@@ -31,10 +31,6 @@ paths:
       responses:
         200:
           description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Employee'
         '401':
           description: Unauthorized
         '403':
